--- a/index.html
+++ b/index.html
@@ -277,11 +277,9 @@
    <body>
       <nav>
         <div class="Logo">
-            
-         <a href="index.html"><img src="Logo.png" width="70px" height="70 px" style="position: relative; top: 10px;"/>
-         <h1 class="Logo-name"><a class="Logo-name" href="index.html">HAPPYFEET</h1></a>
-            
-        </div>
+            <a href="index.html"><img src="Logo.png" width="70px" height="70 px" style="position: relative; top: 10px;"></a>
+            <h1 class="Logo-name"><a class="Logo-name" href="index.html" >HAPPYFEET</h1></a>
+         </div>
          <div class="Links">
             <a class="link" href="Contact.html" target="_self">Contact</a>
             <a class="link" href="About.html" target="_self">About Me</a>
