--- a/Home.html
+++ b/Home.html
@@ -110,8 +110,8 @@
     <body>
         <nav>
             <div class="Logo">
-              <a href="index.html"><img src="Logo.png" width="70px" height="70 px" style="position: relative; top: 10px;"></a>
-              <h1 class="Logo-name"><a class="Logo-name" href="index.html" >HAPPYFEET</h1></a>
+              <a href="Home.html"><img src="Logo.png" width="70px" height="70 px" style="position: relative; top: 10px;"></a>
+              <h1 class="Logo-name"><a class="Logo-name" href="Home.html" >HAPPYFEET</h1></a>
              </div>
              <div class="Links">
                 <a class="link"href="index.html" target="_self">Product</a>
